Footer complete // need polishing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/CSS/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.0/css/all.min.css" integrity="sha512-ykRBEJhyZ+B/BIJcBuOyUoIxh0OfdICfHPnPfBy7eIiyJv536ojTCsgX8aqrLQ9VJZHGz4tvYyzOM0lkgmQZGw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Zoom Call</title>
 </head>
 <body>
@@ -163,9 +163,59 @@
   </main>
 
   <footer>
-    <div class="nav-left">1</div>
-    <div class="nav-center">2</div>
-    <div class="nav-right">3</div>
+    <div class="nav-left">
+      <div class="icons">
+        <i class="fas fa-microphone"></i>
+        <p class="foot-text">Mute</p>
+      </div>
+      <div class="chev"><i class="fas fa-chevron-up"></i></div>
+      <div class="icons">
+        <i class="fas fa-video"></i>
+        <p class="foot-text">Stop Video</p>
+      </div>
+      <div class="chev"><i class="fas fa-chevron-up"></i></div>
+    </div>
+
+    <div class="nav-center">
+      <div class="icons">
+        <i class="fas fa-user-plus"></i>
+        <p class="foot-text">Invite</p>
+      </div>
+      <div class="icons">
+        <i class="fas fa-user-friends"></i>
+        <p class="foot-text">Manage Partecipants</p>
+      </div>
+      <div class="icons">
+        <i class="fas fa-chart-bar"></i>
+        <p class="foot-text">Polling</p>
+      </div>
+      <div class="icons">
+        <i class="fas fa-share-square"></i>
+        <p class="foot-text">Share Screen</p>
+      </div>
+      <div class="chev"><i class="fas fa-chevron-up"></i></div>
+      <div class="icons">
+        <i class="fas fa-comment"></i>
+        <p class="foot-text">Chat</p>
+      </div>
+      <div class="icons">
+        <i class="fas fa-record-vinyl"></i>
+        <p class="foot-text">Record</p>
+      </div>
+      <div class="icons">
+        <i class="far fa-th-large"></i>
+        <p class="foot-text">Breakout Rooms</p>
+      </div>
+      <div class="icons">
+        <i class="fas fa-ellipsis-h"></i>
+        <p class="foot-text">More</p>
+      </div>
+
+    </div>
+    
+    <div class="nav-right">
+      <div>End Meeting</div>
+    </div>
   </footer>
 
 </body>
