--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <p class="foot-text">Polling</p>
       </div>
       <div class="icons">
-        <i class="fas fa-share-square"></i>
+        <i class="fas fa-share-square active"></i>
         <p class="foot-text">Share Screen</p>
       </div>
       <div class="chev"><i class="fas fa-chevron-up"></i></div>
@@ -210,11 +210,10 @@
         <i class="fas fa-ellipsis-h"></i>
         <p class="foot-text">More</p>
       </div>
-
     </div>
-    
+
     <div class="nav-right">
-      <div>End Meeting</div>
+      <div>End meeting</div>
     </div>
   </footer>
 
